--- a/popup.html
+++ b/popup.html
@@ -65,6 +65,27 @@
       color: #888;
       text-align: center;
     }
+    .stats-container {
+      margin-top: 20px;
+      padding: 15px;
+      background: #fff;
+      border-radius: 8px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    }
+    .stat-item {
+      display: flex;
+      justify-content: space-between;
+      margin-bottom: 8px;
+      font-size: 13px;
+      color: #5f6368;
+    }
+    .productivity-score {
+      text-align: center;
+      margin-top: 15px;
+      font-size: 24px;
+      font-weight: 600;
+      color: #4CAF50;
+    }
   </style>
 </head>
 <body>
@@ -75,6 +96,20 @@
       <input type="checkbox" id="toggleFilter">
       <span class="slider"></span>
     </label>
+  </div>
+  <div class="stats-container">
+    <div class="stat-item">
+      <span>Videos Filtered:</span>
+      <span id="filteredCount">0</span>
+    </div>
+    <div class="stat-item">
+      <span>Educational Videos:</span>
+      <span id="educationalCount">0</span>
+    </div>
+    <div class="productivity-score">
+      <span id="productivityScore">100%</span>
+      <div style="font-size: 12px; color: #5f6368;">Productivity Score</div>
+    </div>
   </div>
   <div class="credit">Hide distractions. Grow your focus.</div>
   <script src="popup.js"></script>
