--- a/popup.html
+++ b/popup.html
@@ -86,9 +86,73 @@
       font-weight: 600;
       color: #4CAF50;
     }
+    .progress-container {
+      margin-top: 15px;
+    }
+    .progress-label {
+      font-size: 12px;
+      color: #5f6368;
+      margin-bottom: 5px;
+    }
+    .progress-bar {
+      background: #e0e0e0;
+      height: 8px;
+      border-radius: 4px;
+      overflow: hidden;
+      margin: 5px 0;
+    }
+    .progress {
+      height: 100%;
+      background: #4CAF50;
+      width: 0%;
+      transition: width 0.3s ease;
+    }
+
+    /* Add these new styles */
+    .loader-container {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(249, 249, 249, 0.95);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      z-index: 1000;
+    }
+
+    .loader {
+      width: 40px;
+      height: 40px;
+      border: 3px solid #f3f3f3;
+      border-top: 3px solid #4CAF50;
+      border-radius: 50%;
+      animation: spin 1s linear infinite;
+      margin-bottom: 15px;
+    }
+
+    .loader-message {
+      font-size: 14px;
+      color: #4CAF50;
+      text-align: center;
+      padding: 0 20px;
+      font-weight: 500;
+    }
+
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
   </style>
 </head>
 <body>
+  <div id="loaderContainer" class="loader-container">
+    <div class="loader"></div>
+    <div class="loader-message">Loading your productivity insights...</div>
+  </div>
+
   <h4>YouTube Focus Filter</h4>
   <div class="toggle-container">
     <span>Enable Filter</span>
@@ -99,12 +163,27 @@
   </div>
   <div class="stats-container">
     <div class="stat-item">
-      <span>Videos Filtered:</span>
+      <span>Non Educational Videos Filtered:</span>
       <span id="filteredCount">0</span>
     </div>
     <div class="stat-item">
       <span>Educational Videos:</span>
       <span id="educationalCount">0</span>
+    </div>
+    <div class="stat-item">
+      <span>Total Videos Checked:</span>
+      <span id="totalVideos">0</span>
+    </div>
+    <div class="stat-item">
+      <span>Educational Watch Time:</span>
+      <span id="educationalTime">0 min</span>
+    </div>
+    <div class="progress-container">
+      <div class="progress-label">Educational Content</div>
+      <div class="progress-bar">
+        <div id="educationalProgress" class="progress"></div>
+      </div>
+      <span id="educationalPercentage">0%</span>
     </div>
     <div class="productivity-score">
       <span id="productivityScore">100%</span>
