--- a/popup.html
+++ b/popup.html
@@ -155,7 +155,7 @@
 
   <h4>YouTube Focus Filter</h4>
   <div class="toggle-container">
-    <span>Enable Filter</span>
+    <span>Make Me Productive</span>
     <label class="switch">
       <input type="checkbox" id="toggleFilter">
       <span class="slider"></span>
