feat: updated chrome with better ui, analytics

--- a/popup.html
+++ b/popup.html
@@ -1,196 +1,392 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      width: 240px;
-      padding: 20px;
-      background: #f9f9f9;
-    }
-    h4 {
-      margin-top: 0;
-      font-size: 16px;
-      font-weight: 600;
-      color: #202124;
-    }
-    .toggle-container {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      margin-top: 15px;
-    }
-    .switch {
-      position: relative;
-      display: inline-block;
-      width: 45px;
-      height: 24px;
-    }
-    .switch input {
-      opacity: 0;
-      width: 0;
-      height: 0;
-    }
-    .slider {
-      position: absolute;
-      cursor: pointer;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      background-color: #ccc;
-      transition: 0.4s;
-      border-radius: 34px;
-    }
-    .slider:before {
-      position: absolute;
-      content: "";
-      height: 18px;
-      width: 18px;
-      left: 3px;
-      bottom: 3px;
-      background-color: white;
-      transition: 0.4s;
-      border-radius: 50%;
-    }
-    input:checked + .slider {
-      background-color: #4CAF50;
-    }
-    input:checked + .slider:before {
-      transform: translateX(21px);
-    }
-    .credit {
-      margin-top: 20px;
-      font-size: 10px;
-      color: #888;
-      text-align: center;
-    }
-    .stats-container {
-      margin-top: 20px;
-      padding: 15px;
-      background: #fff;
-      border-radius: 8px;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-    }
-    .stat-item {
-      display: flex;
-      justify-content: space-between;
-      margin-bottom: 8px;
-      font-size: 13px;
-      color: #5f6368;
-    }
-    .productivity-score {
-      text-align: center;
-      margin-top: 15px;
-      font-size: 24px;
-      font-weight: 600;
-      color: #4CAF50;
-    }
-    .progress-container {
-      margin-top: 15px;
-    }
-    .progress-label {
-      font-size: 12px;
-      color: #5f6368;
-      margin-bottom: 5px;
-    }
-    .progress-bar {
-      background: #e0e0e0;
-      height: 8px;
-      border-radius: 4px;
-      overflow: hidden;
-      margin: 5px 0;
-    }
-    .progress {
-      height: 100%;
-      background: #4CAF50;
-      width: 0%;
-      transition: width 0.3s ease;
-    }
+  <head>
+    <style>
+      :root {
+        --background: 0 0% 100%;
+        --foreground: 240 10% 3.9%;
+        --card: 0 0% 100%;
+        --card-foreground: 240 10% 3.9%;
+        --popover: 0 0% 100%;
+        --popover-foreground: 240 10% 3.9%;
+        --primary: 142.1 76.2% 36.3%;
+        --primary-foreground: 355.7 100% 97.3%;
+        --secondary: 240 4.8% 95.9%;
+        --secondary-foreground: 240 5.9% 10%;
+        --muted: 240 4.8% 95.9%;
+        --muted-foreground: 240 3.8% 46.1%;
+        --accent: 240 4.8% 95.9%;
+        --accent-foreground: 240 5.9% 10%;
+        --destructive: 0 84.2% 60.2%;
+        --destructive-foreground: 0 0% 98%;
+        --border: 240 5.9% 90%;
+        --input: 240 5.9% 90%;
+        --ring: 142.1 76.2% 36.3%;
+        --radius: 0.75rem;
+      }
+      body {
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+          "Helvetica Neue", sans-serif;
+        width: 320px;
+        padding: 0;
+        margin: 0;
+        background: white;
+        margin-bottom: 2rem;
+        /* background: linear-gradient(to bottom right, #f0fdf4, #ffffff); */
+      }
+      .header {
+        background: #22c55e;
+        padding: 1rem 1.25rem;
+        color: white;
+      }
 
-    /* Add these new styles */
-    .loader-container {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(249, 249, 249, 0.95);
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      z-index: 1000;
-    }
+      h4 {
+        margin: 0;
+        font-size: 1.25rem;
+        font-weight: 600;
+        color: #ffffff;
+        display: flex;
+        align-items: center;
+        gap: 0.5rem;
+      }
 
-    .loader {
-      width: 40px;
-      height: 40px;
-      border: 3px solid #f3f3f3;
-      border-top: 3px solid #4CAF50;
-      border-radius: 50%;
-      animation: spin 1s linear infinite;
-      margin-bottom: 15px;
-    }
+      .title-container {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: 0.5rem;
+      }
 
-    .loader-message {
-      font-size: 14px;
-      color: #4CAF50;
-      text-align: center;
-      padding: 0 20px;
-      font-weight: 500;
-    }
+      .subtitle {
+        font-size: 0.875rem;
+        color: rgba(255, 255, 255, 0.9);
+        margin-top: 0.25rem;
+      }
+      .switch {
+        position: relative;
+        display: inline-block;
+        width: 44px;
+        height: 22px;
+      }
 
-    @keyframes spin {
-      0% { transform: rotate(0deg); }
-      100% { transform: rotate(360deg); }
-    }
-  </style>
-</head>
-<body>
-  <div id="loaderContainer" class="loader-container">
-    <div class="loader"></div>
-    <div class="loader-message">Loading your productivity insights...</div>
-  </div>
+      .switch input {
+        opacity: 0;
+        width: 0;
+        height: 0;
+      }
 
-  <h4>YouTube Focus Filter</h4>
-  <div class="toggle-container">
-    <span>Make Me Productive</span>
-    <label class="switch">
-      <input type="checkbox" id="toggleFilter">
-      <span class="slider"></span>
-    </label>
-  </div>
-  <div class="stats-container">
-    <div class="stat-item">
-      <span>Non Educational Videos Filtered:</span>
-      <span id="filteredCount">0</span>
+      .slider {
+        position: absolute;
+        cursor: pointer;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: rgba(255, 255, 255, 0.3);
+        transition: 0.3s;
+        border-radius: 24px;
+      }
+      .slider:before {
+        position: absolute;
+        content: "";
+        height: 18px;
+        width: 18px;
+        left: 2px;
+        bottom: 2px;
+        background-color: white;
+        transition: 0.3s;
+        border-radius: 50%;
+        box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+      }
+
+      input:checked + .slider {
+        background-color: white;
+      }
+
+      input:checked + .slider:before {
+        transform: translateX(24px);
+      }
+      .stats-container {
+        margin: 1rem;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 0.75rem;
+        width: max-content;
+      }
+
+      .stat-item {
+        background: #f0fdf4;
+        padding: 0.75rem;
+        border-radius: var(--radius);
+        display: flex;
+        flex-direction: column;
+        gap: 0.25rem;
+        transition: transform 0.2s;
+      }
+
+      .stat-item:hover {
+        transform: translateY(-2px);
+      }
+
+      .stat-label {
+        font-size: 0.75rem;
+        font-weight: 500;
+        color: #16a34a;
+        display: flex;
+        align-items: center;
+        gap: 0.25rem;
+      }
+
+      .stat-value {
+        font-size: 1.25rem;
+        font-weight: 700;
+        color: #15803d;
+      }
+      .progress-container {
+        margin: 0 1rem;
+        padding: 1rem 0;
+      }
+
+      .progress-label {
+        font-size: 0.875rem;
+        font-weight: 500;
+        color: #15803d;
+        margin-bottom: 0.5rem;
+        display: flex;
+        justify-content: space-between;
+      }
+
+      .progress-bar {
+        background: #dcfce7;
+        height: 8px;
+        border-radius: 9999px;
+        overflow: hidden;
+      }
+
+      .progress {
+        height: 100%;
+        background: #22c55e;
+        width: 0%;
+        transition: width 0.3s ease;
+      }
+
+      .productivity-score {
+        margin: 1.5rem 1rem;
+        text-align: center;
+        position: relative;
+      }
+
+      .productivity-score .score-circle {
+        width: 6rem;
+        height: 6rem;
+        margin: 0 auto;
+        background: linear-gradient(to bottom right, #dcfce7, #f0fdf4);
+        border-radius: 9999px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: relative;
+        animation: pulse 2s infinite;
+      }
+
+      @keyframes pulse {
+        0% {
+          box-shadow: 0 0 0 0 rgba(34, 197, 94, 0.2);
+        }
+        70% {
+          box-shadow: 0 0 0 10px rgba(34, 197, 94, 0);
+        }
+        100% {
+          box-shadow: 0 0 0 0 rgba(34, 197, 94, 0);
+        }
+      }
+
+      .productivity-score .score {
+        font-size: 1.875rem;
+        font-weight: 700;
+        color: #16a34a;
+      }
+
+      .score-label {
+        font-size: 0.875rem;
+        font-weight: 500;
+        color: #15803d;
+        margin-top: 0.5rem;
+      }
+
+      .score-breakdown {
+        font-size: 0.75rem;
+        color: #16a34a;
+        margin-top: 0.25rem;
+      }
+
+      .credit {
+        margin: 1.5rem 1rem 1rem;
+        font-size: 0.875rem;
+        font-weight: 500;
+        color: #16a34a;
+        text-align: center;
+      }
+
+      /* Add these new styles */
+      .loader-container {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(249, 249, 249, 0.95);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        z-index: 1000;
+      }
+
+      .loader {
+        width: 40px;
+        height: 40px;
+        border: 3px solid #f3f3f3;
+        border-top: 3px solid #4caf50;
+        border-radius: 50%;
+        animation: spin 1s linear infinite;
+        margin-bottom: 15px;
+      }
+
+      .loader-message {
+        font-size: 14px;
+        color: #4caf50;
+        text-align: center;
+        padding: 0 20px;
+        font-weight: 500;
+      }
+
+      @keyframes spin {
+        0% {
+          transform: rotate(0deg);
+        }
+        100% {
+          transform: rotate(360deg);
+        }
+      }
+    </style>
+  </head>
+  <body>
+    <div id="loaderContainer" class="loader-container">
+      <div class="loader"></div>
+      <div class="loader-message">Loading your productivity insights...</div>
     </div>
-    <div class="stat-item">
-      <span>Educational Videos:</span>
-      <span id="educationalCount">0</span>
+    <div class="header">
+      <div class="title-container">
+        <h4>
+          Make Me Productive
+        </h4>
+        <label class="switch">
+          <input type="checkbox" id="toggleFilter" />
+          <span class="slider"></span>
+        </label>
+      </div>
+      <div class="subtitle">YouTube Focus Buddy</div>
     </div>
-    <div class="stat-item">
-      <span>Total Videos Checked:</span>
-      <span id="totalVideos">0</span>
+
+    <div class="stats-container">
+      <div class="stat-item">
+        <span class="stat-label">
+          <svg
+            width="12"
+            height="12"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          >
+            <path d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20" />
+            <path
+              d="M6.5 2H20v20H6.5A2.5 2.5 0 0 1 4 19.5v-15A2.5 2.5 0 0 1 6.5 2z"
+            />
+          </svg>
+          Educational Videos
+        </span>
+        <span id="educationalCount" class="stat-value">0</span>
+      </div>
+      <div class="stat-item">
+        <span class="stat-label">
+          <svg
+            width="12"
+            height="12"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          >
+            <path d="M22 11.08V12a10 10 0 1 1-5.93-9.14" />
+            <polyline points="22 4 12 14.01 9 11.01" />
+          </svg>
+          Filtered Videos
+        </span>
+        <span id="filteredCount" class="stat-value">0</span>
+      </div>
+      <div class="stat-item">
+        <span class="stat-label">
+          <svg
+            width="12"
+            height="12"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          >
+            <polyline points="22 12 18 12 15 21 9 3 6 12 2 12" />
+          </svg>
+          Total Checked
+        </span>
+        <span id="totalVideos" class="stat-value">0</span>
+      </div>
+      <div class="stat-item">
+        <span class="stat-label">
+          <svg
+            width="12"
+            height="12"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          >
+            <circle cx="12" cy="12" r="10" />
+            <polyline points="12 6 12 12 16 14" />
+          </svg>
+          Learning Time
+        </span>
+        <span id="educationalTime" class="stat-value">0 min</span>
+      </div>
     </div>
-    <div class="stat-item">
-      <span>Educational Watch Time:</span>
-      <span id="educationalTime">0 min</span>
-    </div>
+
     <div class="progress-container">
-      <div class="progress-label">Educational Content</div>
+      <div class="progress-label">
+        <span>Educational Content</span>
+        <span id="educationalPercentage">0%</span>
+      </div>
       <div class="progress-bar">
         <div id="educationalProgress" class="progress"></div>
       </div>
-      <span id="educationalPercentage">0%</span>
     </div>
     <div class="productivity-score">
-      <span id="productivityScore">100%</span>
-      <div style="font-size: 12px; color: #5f6368;">Productivity Score</div>
+      <div class="score-circle">
+        <div id="productivityScore" class="score">0%</div>
+      </div>
+      <div class="score-label">Productivity Score</div>
+      <div class="score-breakdown">Watch time (60%) | Video ratio (40%)</div>
     </div>
-  </div>
-  <div class="credit">Hide distractions. Grow your focus.</div>
-  <script src="popup.js"></script>
-</body>
+
+    <div class="credit">Hide distractions. Grow your focus.</div>
+    <script src="popup.js"></script>
+  </body>
 </html>
