--- a/popup.html
+++ b/popup.html
@@ -82,10 +82,15 @@
         left: 0;
         right: 0;
         bottom: 0;
-        background-color: rgba(255, 255, 255, 0.3);
-        transition: 0.3s;
+        background: linear-gradient(135deg, #cbd5e1, #94a3b8);
+
+        transition: all 0.3s ease;
         border-radius: 24px;
+        border: 1px solid #b4e50d;
+        box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.1),
+          0 2px 4px rgba(0, 0, 0, 0.1);
       }
+
       .slider:before {
         position: absolute;
         content: "";
@@ -93,18 +98,42 @@
         width: 18px;
         left: 2px;
         bottom: 2px;
-        background-color: white;
-        transition: 0.3s;
+        background: linear-gradient(135deg, #ffffff, #f8fafc);
+        transition: all 0.3s ease;
         border-radius: 50%;
-        box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2),
+          0 0 0 1px rgba(255, 255, 255, 0.3);
       }
 
+      /* ON State - Green Theme */
       input:checked + .slider {
-        background-color: white;
+        background: linear-gradient(135deg, #22c55e, #16a34a);
+        box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.1),
+          0 0 12px rgba(34, 197, 94, 0.4);
       }
 
       input:checked + .slider:before {
         transform: translateX(24px);
+        background: linear-gradient(135deg, #ffffff, #f0fdf4);
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2),
+          0 0 0 2px rgba(34, 197, 94, 0.3);
+      }
+
+      /* Add pulsing animation when turning ON */
+      @keyframes togglePulse {
+        0% {
+          box-shadow: 0 0 0 0 rgba(34, 197, 94, 0.4);
+        }
+        70% {
+          box-shadow: 0 0 0 6px rgba(34, 197, 94, 0);
+        }
+        100% {
+          box-shadow: 0 0 0 0 rgba(34, 197, 94, 0);
+        }
+      }
+
+      input:checked + .slider {
+        animation: togglePulse 0.6s ease;
       }
       .stats-container {
         margin: 1rem;
@@ -278,9 +307,7 @@
     </div>
     <div class="header">
       <div class="title-container">
-        <h4>
-          Make Me Productive
-        </h4>
+        <h4>Make Me Productive</h4>
         <label class="switch">
           <input type="checkbox" id="toggleFilter" />
           <span class="slider"></span>
